Add squashing the bug

--- a/PicnicBasket/PicnicBasket/Base.lproj/Main.storyboard
+++ b/PicnicBasket/PicnicBasket/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bug.png" id="gUk-GU-8vj">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bug.png" id="gUk-GU-8vj">
                                 <rect key="frame" x="160" y="185" width="135" height="142"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <animations/>
